bib style, alg table, no section numbering

--- a/flexible_needle.bib
+++ b/flexible_needle.bib
@@ -301,7 +301,7 @@
 }
 
 @article{cong2015quantitative,
-  title={Quantitative analysis of deformable model-based 3-D reconstruction of coronary artery from multiple angiograms},
+  title={Quantitative analysis of deformable model-based 3-{D} reconstruction of coronary artery from multiple angiograms},
   author={Cong, Weijian and Yang, Jian and Ai, Danni and Chen, Yang and Liu, Yue and Wang, Yongtian},
   journal={IEEE Transactions on Biomedical Engineering},
   volume={62},
