--- a/template.tex
+++ b/template.tex
@@ -55,6 +55,7 @@ grestore
 \usepackage{spreadtab}
 \usepackage{algorithm,algorithmic}
 \usepackage{amsmath}
+\usepackage[numbers]{natbib}
 
 \DeclareMathOperator*{\argmin}{argmin} % thin space, limits underneath in displays
 \DeclareMathOperator*{\myint}{int} %
@@ -91,18 +92,12 @@ grestore
 %\authorrunning{Short form of author list} % if too long for running head
 
 \institute{
-  L. Joskowicz \at
+  L. Joskowicz, G. Medan \at
   CASMIP  Laboratory\\
   School  of  Computer  Science  and  Engineering\\
   The  Hebrew  University of Jerusalem, Israel\\
-  \email{josko@cs.huji.ac.il}           %  \\
+  \email{josko/gmedan@cs.huji.ac.il}           %  \\
 %             \emph{Present address:} of F. Author  %  if needed
-\and
-  G. Medan \at
-  CASMIP  Laboratory\\
-  School  of  Computer  Science  and  Engineering\\
-  The  Hebrew  University of Jerusalem, Israel\\
-  \email{gmedan@cs.huji.ac.il}         
 }
 
 % \date{Received: date / Accepted: date}
@@ -126,7 +121,7 @@ Radon space registration
 }
 \end{abstract}
 
-\section{Introduction}
+\section*{Introduction}
 
 Image guided minimally invasive techniques have become commonplace for interventional procedures such as biopsies and aspirations.
 In these procedures, a flexible needle is inserted under image guidance towards a target, either manually or using robotic actuators. Repeated imaging is required during insertion to ensure that the needle is advancing in the desired direction and to correct the insertion path as required. Localization errors of a few millimeters in the needle insertion trajectory and its final placement can lead to misdiagnosis, repeated insertion attempts, and failed treatment.
@@ -148,7 +143,7 @@ We have recently introduced a novel approach to CT radiation dose reduction in s
 %Dose reduction for physician
 The reduction of dose has implications for medical staff as well as patients, since the time spent by physicians, nurses and technologists throughout their careers in the intervention suite necessarily involves exposure to ionizing radiation. While protection equipment is used by medical professionals, the cumulative exposure has been linked to an increased risk of cataracts and cancer \cite{miller2010occupational, sarti2012low}. In interventional CT, it is important to develop methods allowing dose reduction for slightly different concerns, such as excessive dose to the radiologist's hands \cite{stoeckelhuber2005radiation}.
 
-\section{Previous work}
+\section*{Previous work}
 Various methods have been recently developed to achieve accurate needle insertion by robotic actuators. These works focus on the mechanical modelling of the robotic system, the patient anatomy, and the needle trajectory planning, with less attention to needle localization from imaging modalities.
 Wu et al. \cite{wu2013automatic} and Engh et al. \cite{engh2010percutaneous} describe implementations of a bevel-tip needle steering method using duty-cycle spinning of the needle that relies on the needle bending tendency due to asymmetry. Such systems model the needle-tissue interaction to execute a control sequence to follow a pre-planned trajectory. Image-based feedback is mentioned as a means to allow corrections of the control sequence mid-insertion by adjusting the planned trajectory based on the actual needle trajectory.
 Ben-David et al. \cite{ben2018robotic} describe a robotic system for flexible needle insertion under CT guidance. A dual guiding mechanism is composed of a driver that advances the needle while a positioning unit steers it during the insertion. A pre-planned 3D trajectory is executed and corrected during the insertion based on full repeated CT scans.
@@ -163,7 +158,7 @@ Yaniv et al. \cite{yaniv2010needle} describe a system in which embedded electrom
 
 In a different clinical application, Cong et al.  \cite{cong2015quantitative} show that the 3D structure of coronary arteries can be reconstructed from a few X-ray angiography views using forward projection of an evolving parametric 3D model into 2D projections and updating the model based on the projection images. This method may be applicable to track the location of a needle and patient anatomy, although it has not been tried yet. 
 
-\section{Method}
+\section*{Method}
 
 We describe next a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning. We begin by computing a sinogram-space rigid registration of the patient position in the CT scanner coordinate frame between a baseline scan without a needle, and a repeat scan with a needle introduced. The repeat scan is performed by sampling sparsely in the view angle domain (fractional scanning) and without reconstructing the CT image, while the baseline scan is assumed to be a full scan (sampled densely in the view angle domain). We use projection difference images (shown in Fig. \ref{proj_diff_fig}), which are calculated by subtracting registered reprojected baseline scan images from the sparse set of repeat projection images. These highlight the differences between scans, which in our case is assumed to be the needle. The needle trajectory is then traced in 3D space using only the projection difference images. The stages of our method are:
 \begin{enumerate}
@@ -215,9 +210,11 @@ The trajectory of the needle in 3D space is estimated by incrementally establish
  %\item Once the length of the evaluated curve exceeds the known distance between the tip and the center of the spherical marker, the last segment is shortened accordingly, with the last point representing the tip localization.
 %\end{enumerate}
 
-\begin{algorithm}
-\caption{Needle trajectory tracing}
+\begin{table}
+\hline
 \begin{algorithmic}
+  \STATE
+  \STATE INPUT: projection difference image
   \STATE $s\leftarrow$ localize spherical marker
   \STATE $\hat{n}_1 \leftarrow$ estimate initial needle direction
   \STATE $p_1, p_2, p_3, p_4 \leftarrow$ initialize from $s$ along $\hat{n}_1$
@@ -231,10 +228,14 @@ The trajectory of the needle in 3D space is estimated by incrementally establish
     \STATE $i\leftarrow i+1$
   \ENDWHILE
   \STATE adjust $p_i$ such that $length(C_i) = L_{marker,tip}$
+  \STATE
 \end{algorithmic}
-\end{algorithm}
+\hline
+\caption{Needle trajectory tracing algorithm.}
+\label{algo}
+\end{table}
 
-Table 1 presents the algorithm. 
+Table \ref{algo} presents the algorithm. 
 In each iteration a new point $p_{i+1}(\hat{n}) = p_i + \Gamma \hat{n}$ is sought and $\hat{n}$ is a direction to be determined via optimization of a cost function detailed below.
 A 3D curve $C_{i+1}[\hat{n}]$ is fitted to the landmark points $p_1, p_2, ..., p_i, p_{i+1}(\hat{n})$, and projected onto each of the $K$ view angles projection difference images to obtain projected curves $P_j C_{i+1}[\hat{n}] = c_{i+1}^j[\hat{n}]$ where $j=1,...,K$ is the view angle index and $P_j$ is the projection operator for view $j$.
 The direction $\hat{n}$ is obtained by optimizing a cost function designed to attain a minimum when the projection of the curve $C_{i+1}$ onto the set of projection difference images follows the needle trajectory traced in the images:
@@ -245,7 +246,7 @@ $$ p_{i+1} = p_i + \Gamma \hat{n}(\theta_i^*, \phi_i^*) $$
 
 The incremental process is stopped once the length of the 3D curve $C_{i+1}$ exceeds the known distance between the marker and needle tip. Then, the tip position is determined by trimming the last segment so that the overall length of the curve is equal to the known marker-tip distance.
 
-\section{Results}
+\section*{Results}
 
 To demonstrate our method we conducted an experiment consisting of flexible needles inserted into an abdomen phantom (CIRS model 57 Triple Modality 3D Abdominal Phantom) and scanned using GE Discovery CT750HD scanner at GE Healthcare Haifa (see Fig. \ref{long_needle_fig}). The needles used were: a long 16 gauge (1.65mm outer diameter) needle, and short 22 gauge (0.72mm outer diameter) needle. For the long needle, the marker center was fixed at 235mm from the tip, and for the short needle at 135mm (figures \ref{long_needle_fig} and \ref{short_needle_fig} respectively).
 The reconstructed image size is 800$\times$800$\times$144 voxels, with spatial resolution of 0.58$\times$0.58$\times$1.25 mm$^3$. The detector array consists of 885 elements scanned at 984 views at regular intervals in the range [0$^{\circ}$ , 360$^{\circ}$), where four slices were acquired in each full revolution. The data was re-binned from fan-beam to parallel rays representation of the projections.
@@ -300,7 +301,7 @@ Table \ref{results_table} summarizes the results of needle tip localization for 
 
 Running times of 200-250 seconds were observed on Intel i7 CPU running unoptimized Matlab code. To allow our method to be used in a clinical setting, parallelization of computations on GPU will be required in order to bring the running time down to several seconds. In the projection difference calculation stage, the projection difference images can be calculated in parallel. Additionally, in each round of landmark point addition, the operations on each projection difference image can be parallelized to further reduce the running time.
 
-\section{Discussion}
+\section*{Discussion}
 Our method extends the novelty of projection-space localization from rigid to flexible needles, allowing the potential of dose reduction in a larger range of interventional CT procedures. The localization can be displayed as visual feedback to the radiologist on the baseline scan, which is free from artifacts due to the needle, allowing an unobstructed view of the target tissue.
 
 \begin{figure*}
@@ -319,7 +320,7 @@ The study itself is limited to several scans of an abdomen phantom, with the fra
 
 Future work would address the issue of patient motion during the repeat scan to obtain a better localization of the needle by modelling the movement and finding its parameters directly from projection space. Additionally, deformable registration in projection space as another stage after rigid registration would extend the usability of our method to situations in which tissue deformations, such as those caused by breathing, cannot be neglected.
 
-\section{Conclusions}
+\section*{Conclusions}
 We have described a method for flexible needle and patient tracking in interventional CT procedures, based on fractional CT scanning and without image reconstruction of the repeat scan.
 Our method can accurately trace a flexible needle's 3D trajectory by following its shape in projection space for a sparse set of views. Starting from a spherical marker attached to it at a known distance from the tip, it traces the trajectory to the tip without reconstructing the CT image.
 
@@ -334,23 +335,7 @@ The main advantages of our method are:
 In a limited phantom study performed in cooperation with a leading CT manufacturer, an accuracy level comparable to 3D image space methods is shown.
 The dose reduction enabled by our method allows either more frequent tip localizations during needle insertion for a similar total dose, or a reduced total dose for the same frequency of tip localization - a reduction of $\times$10-25, based on the fraction of views used from the repeat scan.
 
-
-% % Non-BibTeX users please use
-% \begin{thebibliography}{}
-% %
-% % and use \bibitem to create references. Consult the Instructions
-% % for authors for reference list style.
-% %
-% \bibitem{RefJ}
-% % Format for Journal Reference
-% Author, Article title, Journal, Volume, page numbers (year)
-% % Format for books
-% \bibitem{RefB}
-% Author, Book title, page numbers. Publisher, place (year)
-% % etc
-% \end{thebibliography}
-
-\bibliographystyle{ieeetr}
+\bibliographystyle{spbasic_order_of_appearance}
 \bibliography{flexible_needle}
 
 \end{document}
