--- a/flexible_needle.bib
+++ b/flexible_needle.bib
@@ -310,3 +310,10 @@
   year={2015},
   publisher={IEEE}
 }
+
+@misc{adelmanmsc2018,
+  author = {Adelman, Zeev},
+  title = {Reduced-dose region-of-interest image reconstruction in repeat CT scanning}, 
+year = {2019},
+  note = "Master Thesis, The Hebrew University of Jerusalem, Forthcoming."
+}
