--- a/results.tex
+++ b/results.tex
@@ -40,8 +40,8 @@ ALL &
 0.7 $\pm\hspace{0.04cm}$ 0.2\\
 \hline
 \end{tabular}
-\caption{\small{Summary of experimental results. L/S stands for long/short needle, respectively.
-The bottom part of the table shows means and standard deviations across the long, short and all scans in the dataset.}}
+\caption{Summary of experimental results. L/S stands for long/short needle, respectively.
+The bottom part of the table shows means and standard deviations across the long, short and all scans in the dataset.}
 \label{results_table}
 \end{center}
 \end{table}
