--- a/template.tex
+++ b/template.tex
@@ -111,7 +111,7 @@ grestore
 We present a new method for flexible needle and patient localization in interventional CT procedures based on fractional CT scanning.
 Our method accurately localizes the trajectory of a flexible needle to which a spherical marker is attached at a known distance from the tip with respect to a baseline scan of patient in the CT scanner coordinate frame. 
 The localization is achieved with a significantly lower dose compared to a full scan using sparse view angle sampling and without reconstructing the CT image of the repeat scan.
-Our method starts by performing rigid registration between the patient and the baseline scan in 3D Radon space computed from the sparse projection data.  It then computes 2D projection difference images in which the flexible needle and the spherical marker appear as prominent features. Their 3D spatial locations are then automatically extracted from the projection images to accurately trace the flexible needle trajectory. To validate our method, we conducted registration and needle trajectory localization experiments in seven abdomen phantom scans using two types of flexible needles. Our experimental results yield a mean needle trajectory localization error of 0.7 $\pm$ 0.2mm and a mean tip localization error of 2.4 $\pm$ 0.9 mm with a x7.5 radiation dose reduction with respect to a full CT scan. The significant radiation dose reduction enables more frequent needle trajectory localization during the needle insertion for a similar total dose, or a reduced total dose for the same localization frequency.
+Our method starts by performing rigid registration between the patient and the baseline scan in 3D Radon space computed from the sparse projection data.  It then computes 2D projection difference images in which the flexible needle and the spherical marker appear as prominent features. Their 3D spatial locations are then automatically extracted from the projection images to accurately trace the flexible needle trajectory. To validate our method, we conducted registration and needle trajectory localization experiments in seven abdomen phantom scans using two types of flexible needles. Our experimental results yield a mean needle trajectory localization error of 0.7 $\pm$ 0.2mm and a mean tip localization error of 2.4 $\pm$ 0.9 mm with a $times$7.5 radiation dose reduction with respect to a full CT scan. The significant radiation dose reduction enables more frequent needle trajectory localization during the needle insertion for a similar total dose, or a reduced total dose for the same localization frequency.
 \keywords{
 interventional CT \and 
 fractional CT scanning \and 
@@ -134,7 +134,7 @@ Dose reduction in interventional CT is important both for patients and for the m
 Other imaging modalities used for interventional procedures include ultrasound, X-ray fluoroscopy and cone-beam CT.
 Ultrasound is a cost effective imaging solution. However, it only provides 2D cross sectional images with limited resolution and a low signal-to-noise ratio (SNR) \cite{sheafor2000comparison}. Although 3D/4D ultrasound imaging is becoming more available in recent years, its use is still limited in clinical practice.
 X-ray fluoroscopy offers improved spatial and intensity resolution, but is not suitable for procedures that require axial views or when complex anatomical relationships must be characterized in 3D during the intervention.
-Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with a x2-3 radiation dose reduction \cite{dynact}.
+Flat-panel cone-beam CT is a relatively new technology increasingly used in interventional radiology. However it has longer scan times and increased radiation scatter, resulting in increased artifacts compared to multi-detector CT \cite{orth2008cbct}. Recent advances have reduced scan times to 5-20 seconds, with a $times$2-3 radiation dose reduction \cite{dynact}.
 
 Dose reduction techniques for CT aim to achieve good image quality for a single, standalone scan acquisition. The most common radiation dose reduction technique is tube current modulation, in which the scan is acquired with a lower tube current. However, this technique decreases the scanning signal to noise ratio, which results in noise, lowered imaging contrast and resolution, and introduces imaging artifacts. Several methods have been developed to address these problems, including image denoising \cite{manduca2009projection} and image reconstruction with statistical noise models  \cite{zhang2016statistical,kim2015sparseview,niu2014sparse,liu2014total}. The radiation dose is typically x2-3 that of a full CT scan. 
 
@@ -301,7 +301,7 @@ The running time of our implementation is 200-250 seconds on an Intel i7 CPU run
 
 The key novelty of our method is the simultaneous tracking of a flexible needle and the registration of the patient location with respect to a baseline scan by fractional scanning, which precludes the reconstruction of the scanned image.  The computed flexible needle location can be displayed with respect to the baseline CT scan images in 2D or 3D to provide visual feedback to the clinician. The resulting augmented images are free of imaging artifacts and allow an unobstructed view of the target tissue and its surroundings. The accurate flexible needle location is of particular use for robotically driven needles to determine and adjust the needle insertion trajectory with substantially less radiation dose. 
 
-Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching a spherical marker to the flexible needle by the medical staff before the intervention. The potential ten-fold reduction in radiation dose is much more substantial than that of existing methods, i.e. about x2-3 of a full scan. 
+Note that the spherical marker that is attached to the flexible needle is unobtrusive and does not add a burden to the intervention work flow since it only requires attaching a spherical marker to the flexible needle by the medical staff before the intervention. The potential ten-fold reduction in radiation dose is much more substantial than that of existing methods, i.e. about $times$2-3 of a full scan. 
 
 {\em Method limitations}: our method is applicable to situations in which the patient anatomy baseline and repeat scans present minimal or no deformations and rigid registration can be used to align them. The scan field of view should include both the flexible needle and the spherical marker and should avoid in-plane needle insertion (an out-of-plane angle $>3^o$ suffices). 
 
